@@ -15,6 +15,7 @@ DIST gitlab-ce-8.11.2.tar.gz 25627225 SHA256 a807f06cb80ac3becae2f89702988203e28
 DIST gitlab-ce-8.11.3.tar.gz 25701850 SHA256 23dc756ae148074701acaefcc686a66ccf703da53dce721f0fc2673f143620eb SHA512 0808da71567799396389164b54954caf326a501199ded766c0cb39905d7aef44df7267e2066b3bd9a586833df7b19dbf4ae4b7f356aa49ad9d8eed065b162d90 WHIRLPOOL 87277ed4793e75814d82ed3bb8076ddb4fe5f47aa68115121c80d6899ab2fad56a39e1ec88e9ac157961a6ef2dc57d076f265816dc58a5b86ab36d15bffc5535
 DIST gitlab-ce-8.11.4.tar.gz 25704666 SHA256 c8d94888b4f7aabaab2d548926935edf0fc284277006e284424e202122b072a3 SHA512 dc4f2dfaabe95ecea1202da8e1af6d850281146faa7ed2c522c34abd0167f9ff4b4807fca76a61fc2f607126efedca552652474edf552f2848d797f92b5b1ef2 WHIRLPOOL 30b2a46e3b3a4503fd1a1cc68eb2709b76067068550729fe45b9a4b3917cfac08932da689743744c03041a7b705432a4f601fb6a1e2d81a897cc035197e90b5f
 DIST gitlab-ce-8.11.5.tar.gz 25704701 SHA256 5a0de2cdcb97396d8174ad49126e67829df47a2abf1831439186ae443e692662 SHA512 961dad680e4a7a158e316ac66e29ff42bb4f065796fcf360c6cba4c102eb67a240ea188a8ef1164608e05a3d6c5e04790ecc73ea2f2e5cc89766a2751b108532 WHIRLPOOL 35c1e8f7ba2f9fba159cd182c97f0d14f17b289e6e238027beccd9f805fa8622a353c507a56a9ec8d81bc64698fd35fc2cd0ad73c35a86a03cb894c62b458848
+DIST gitlab-ce-8.11.6.tar.gz 25705796 SHA256 354da5db4087ce80d9f43cbae87830ccd06c2c559f8dfb764dffd7420588a66b SHA512 5abda185bfbbad61060ac9b5e83101d88f0f6c8cc12580c71467c7bfdc380d60acc9a8a855ac448759c8be9a5297ba721d0e641ec144741a7c57dd038e13b269 WHIRLPOOL 046ecd777cebc8768c9cdefab7f782c7943403e0c5c6b963ee2359f10f446b5cbe6974d07e14a3089c79830722de6d1e965fa2a58316e75a280ddf09825a1fe6
 DIST gitlab-ce-8.12.0_rc2.tar.gz 25956358 SHA256 86a25fe391facc0686a03d5e165881131b2d2d0aadef93b0c011c2462eb9abb7 SHA512 c015ba8b4bb6b17a6a55b305ef99956438255b6f9ea9793d3207ac2113ba6f23c0e4817dc91aea7f18f16283b85bc280cb4054ee6fff340c01e1379548c5f8d0 WHIRLPOOL 571f5692866df484c9d26da7aa3ef4aebe6da1371b40e109b7094aad8ec0627a4ec857192abf29b4f1c06b13eaa6e9dc4a1140dc5a9321b68f4b764dd8dab292
 EBUILD gitlab-ce-8.10.6.ebuild 11710 SHA256 1659a2e43491488fa6fbbee1699cc4138e8938f694e73310e5faf45fbd9f2578 SHA512 70304f8fe862988d4092dd37c5a66fdfec56c9cb2d62a78f2cdf365a0c629606c6fb9081dbdc7e68530d43894d1cb645d168db8f3f0c8a9999873afd9032ec52 WHIRLPOOL dbf26294a9d6eb4258a67c64844370f1423fa59210b306bc66ea53a902cbc564b1cd084b765759e93d7970df30417e6482dfbbf271dda8d387ef006837123ac3
 EBUILD gitlab-ce-8.11.0.ebuild 11703 SHA256 f95aa4a60c85da0155df6b989e343296eba23a6c2f12055c5f94bee53f5d9bc0 SHA512 6d1c7c3e3139d456a7b22431b326401a9b56e435000a02a572bfdbb52c5495e098b0406ab9b8051a2a901878e3a3a2c4332af9a0bf50ff1a36051f9436c1ddbe WHIRLPOOL bd92de9d5fda4a4b1802e814a55ea1e1a9848a9e085b9ad88ba108771dc68953156c8cecde64ef2250eba8f2b9568f73969460aa61c4901957d9b7771558ed9c
@@ -22,7 +23,8 @@ EBUILD gitlab-ce-8.11.2.ebuild 11712 SHA256 02dd8184aa55060d9b36fefef46d2506f251
 EBUILD gitlab-ce-8.11.3.ebuild 11712 SHA256 41be23427e3c7d550888eec40091d7e6f6c0cbe477712bb0597362db1490e342 SHA512 fca0648f60a292438746b9ba4ab532957a58889458e45c20ad3d18cf6b46130fe8c4087a813fe2b93ac15f6ab756e67188087c5bf51222b16230bd1fb9431872 WHIRLPOOL b1c09c4f9bc50c584f5e22e2db955d636631ec117054c40c77f68945ed64a048a598f014bc463ad9a5afce3f3317dcafd6bcf9321d2c38a1e36e2fe11506e500
 EBUILD gitlab-ce-8.11.4.ebuild 11954 SHA256 1970a09040e9d4e924a187bf108dece607825fe62a2fed7a6202a8c24e878f15 SHA512 189157bd48f107fff5e7b476f4b103c40c81baf2620bd1bf5600547f66c3dfe4ad7aec4001422c4f69a49ba973fdff724d8868d0cbba9719bed4908f3bb60772 WHIRLPOOL 4f270f6251d4172c956492ac3f2d7a2041db4d5ec3b344f43af9f0d01fc8fd3274e225ecbd1d35128757ece050cd91db5db74629c377d553de2afcf015ce9c48
 EBUILD gitlab-ce-8.11.5.ebuild 11954 SHA256 1d064416cf453ac5e66dcb39c332db6ef01636f647dafd80faeb357f61a8c365 SHA512 927327684f3914962f2f48c74dd620cc0e8c1fac0ba5eb00e0411f61189ab8bf77bcc3ee9aa3be533e354c0375935ba981d276487faa965e2159e509d00c5468 WHIRLPOOL f6114dfed971973a89a350637818c9546554aac04fc637b276b37411e3e6b425e254dd8c2bb05019893c07f24deefe35d08a6234b2be4c06c1a6f56d39f21d33
+EBUILD gitlab-ce-8.11.6.ebuild 11954 SHA256 2752b8057eac0cd77e74bc7f323a6ab0037c9d70559a637f15e30f11ba244b65 SHA512 a649871bc5594aac19ac816a53a164edde1c7a70933c777489ee45c98515099c2748dd2a65fb433481ecd69ed9fd1f386e2f137b8cb9761453252ceab362e4cd WHIRLPOOL b623e4a6ed638c42672f0f8cde252681c89b92831d8bfb687a8ab7bb374335552586b77bd7066a898ed6612715732f538b29acbe874bd31e72c63f49e54deb00
 EBUILD gitlab-ce-8.12.0_rc2.ebuild 11930 SHA256 391f8d9bcb47261f1aed69952ea4555feda25d3e40d9afa8301d510b475d7003 SHA512 b6c0f8ddf8b44e916dff90fcdae0de56291c9f44b44f912db53a478862e9cf76135b90bf9f4266ad572b0f292c0e24b3666344defdefea2ac968d18872e84205 WHIRLPOOL cb52858b2e557e423fc3745da852a6fd24e6b2498abe0700654648cd5398a8d9d05cd3218dbb71947d700ca68b5432aa2c76a666ccdaaafdcf39f6aacb311992
 EBUILD gitlab-ce-9999.ebuild 11893 SHA256 f0bee749c09a41df732e4b0527283faecb7570950ece0efc2fd46aadda3755cb SHA512 1f94b0784cb94e5369dcc5e8be9cd6006788cb92edadb4f9268bb8607c7c36cdd2dcd361b050436620199f28a481d9239a425e208cdbf56c205bacc8242a8544 WHIRLPOOL 10dfaa25eef9c6b6fd37f8c0b4d86e58a4bfd03d2e69579543326b804683dd730973165b88dc20823264dcb059cc37bd57c5d43326eccd0e4c845e1e6369ba3a
-MISC ChangeLog 6437 SHA256 46a566a9f9cfc9f7d83985eab4f419d84244ff52c4a20bfd2690b664ee15792f SHA512 0c1a8d39cf67a6e5fe0194300084d21ef6f5e0932aee21a8fbf10d79825137be8c8f5b9316bfb8601751963e38936c5c4ce7eecac750660c543f566c231b7955 WHIRLPOOL d26c14426e11e26fc4c4a7c0e1fea25792f10db7c675d936c265b8f3ed66c8ff9f4ef5adb3b150359ee2629e2e10e2514a4209564324e5354aecbc50e0eb68da
+MISC ChangeLog 6605 SHA256 3cce45e5f6d8aacf11b444d5ed18acaaaaf7e0d6d6d5dd1c6168cee8cc40d917 SHA512 bd07a0d06641cd58bf024a37fd4f2f54857b2b4eefffdf9fa94906aba893804258446ffa9a362336e5e303396fc3ad02c71bfa6ca81a98b0101dcc4e72fd1c9b WHIRLPOOL fd34627aab2bb1b6fece50dc094cbc0d0a5df59ee22f423e94ce7a94d921774344be9b0328b7bb17353d1e6a10f552ea78548fc21c8941a5029431c4e82fe1ae
 MISC metadata.xml 545 SHA256 1b7fc44d811e1ab7638fe4a40253f49d5f1071872d3020c22c4f67662750cb2f SHA512 86f47d297892bccfefa087d93936296f5647993a9ec8e3f47907a6859cbf385e5bc6f00502d7836c9e8d9efef2b6725bf145b0150924c2082b2bd164469ef6ea WHIRLPOOL 6bfb8a55684d68c8bfa6e025a0be965f7b815394ee0896dd2a13cfb524e3cf3f3149acc9072897e30a1842060389576aac07ea8beb4a8b0bfc3e8eab3723f2a1
