@@ -1,3 +1,8 @@
+*gitlab-ce-8.11.6 (18 Sep 2016)
+
+  18 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.11.6.ebuild:
+  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.11.6
+
 *gitlab-ce-8.12.0_rc2 (11 Sep 2016)
 
   11 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.12.0_rc2.ebuild,
